--- a/examples/dashboard/index.html
+++ b/examples/dashboard/index.html
@@ -7,7 +7,8 @@
 
     <title>Example Dashboard</title>
 
-    <!-- <link rel="stylesheet" href="/css/application.css"> -->
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="../../informant.css">
 
     <!--[if lt IE 9]>
     <script src="../../lib/es5-shim/es5-shim.min.js"></script>
@@ -65,7 +66,7 @@
         //   })
         //   .end()
         .graph()
-          .position(0, 390)
+          .position(0, 400)
           .size(340, 780)
           .metric(summary.metric().sum('_uid').byHour())
           // .title('Visits')
