Added title & description to graph element

--- a/examples/dashboard/index.html
+++ b/examples/dashboard/index.html
@@ -69,8 +69,8 @@
           .position(0, 400)
           .size(340, 780)
           .metric(summary.metric().sum('_uid').byHour())
-          // .title('Visits')
-          // .description('Number of unique visits')
+          .title('Visits')
+          .description('Number of unique visits')
           .end()
         // .graph
         //   .position(3, 1)
