Changed 'title' and 'description' attributes to more generic 'header' and 'footer'

--- a/examples/dashboard/index.html
+++ b/examples/dashboard/index.html
@@ -69,8 +69,8 @@
           .position(0, 400)
           .size(340, 780)
           .metric(summary.metric().sum('_uid').byHour())
-          .title('Visits')
-          .description('Number of unique visits')
+          .header('Visits')
+          .footer('Number of unique visits')
           .end()
         // .graph
         //   .position(3, 1)
@@ -142,14 +142,14 @@
           .position(0, 0)
           .size(340, 370)
           .metric(summary.metric().average('session_time', secondsToHours, d3.format('.2r')))
-          .title('Average Visit Time')
-          .description('Average number of hours per visit')
+          .header('Average Visit Time')
+          .footer('Average number of hours per visit')
           .end()
         .pie()
           .position(400, 0)
           .size(340, 370)
           .metric(summary.metric().byDayOfWeek(true, true))
-          .title('Day of Week')
+          .header('Day of Week')
           .end()
         // .pie
         //   .position(4, 4)
