Added bubble element

--- a/examples/dashboard/index.html
+++ b/examples/dashboard/index.html
@@ -40,45 +40,41 @@
       }
 
       informant.group()
-        // .bubble
-        //   .position(1, 1)
-        //   .size(3, 1)
-        //   .metric(
-        //     summary.metric()
-        //       .average('session_time', 'average_visit_hours', secondsToHours)
-        //       .average('_uid', 'visits_per_hour')
-        //       .sum('video_id', 'total_views')
-        //       .by('station_id'))
-        //   .vars({
-        //     keyField: 'visits_per_hour',
-        //     valueField: 'average_visit_hours',
-        //     radiusField: 'total_views',
-        //     title: 'Overview',
-        //     description: 'x: Average unique visits per hour, y: Average visit time in hours, radius: Total number of views'
-        //   })
-        //   .end()
+        .bubble()
+          .position(0, 0)
+          .size(320, 1520)
+          .metric(
+            summary.metric()
+              .average('_uid', 'key')
+              .average('session_time', 'value', secondsToHours)
+              .sum('video_id', 'radius')
+              .by('station_id')
+          )
+          .header('Overview')
+          .footer('x: Average unique visits per hour, y: Average visit time in hours, radius: Total number of views')
+          .end()
         .list()
-          .position(0, 1170)
+          .position(360, 1170)
           .size(1040, 350)
           .metric(summary.metric().by('station_id'))
           .header('Radio Stations')
           .end()
         .graph()
-          .position(360, 0)
+          .position(720, 0)
           .size(320, 740)
           .metric(summary.metric().sum('_uid').byHour())
           .header('Visits')
           .footer('Number of unique visits')
           .end()
         .graph()
-          .position(720, 0)
+          .position(1080, 0)
           .size(320, 740)
           .metric(summary.metric().average('session_time', secondsToHours).byHour())
           .header('Average Visit Time')
           .footer('Average number of hours spent per visit')
           .end()
         .graph()
-          .position(1080, 0)
+          .position(1440, 0)
           .size(320, 740)
           .metric(
             summary.metric()
@@ -89,57 +85,60 @@
                 // multiplied by number of unique visitors
                 return d.unique_visits * d.average_session_length;
               }, secondsToHours)
-              .byHour())
+              .byHour()
+          )
           .header('Total Tuning Hours')
           .footer('Total hours spent viewing')
           .end()
         .pie()
-          .position(0, 780)
+          .position(360, 780)
           .size(320, 350)
           // .metric(summary.metric().by('platform_type'))
-          .metric(summary.metric().by(function(d, index) {
-            // Treat blank platform types as desktop
-            return d[index('platform_type')] || 'desktop';
-          }))
+          .metric(
+            summary.metric().by(function(d, index) {
+              // Treat blank platform types as desktop
+              return d[index('platform_type')] || 'desktop';
+            })
+          )
           .header('Platform')
           .end()
         .number()
-          .position(0, 0)
+          .position(360, 0)
           .size(320, 350)
           .metric(summary.metric().distinctCount('station_id'))
           .header('Radio Station Count')
           .footer('Total unique stations')
           .end()
         .number()
-          .position(0, 390)
+          .position(360, 390)
           .size(320, 350)
           .metric(summary.metric().sum('video_id', d3.format(',')))
           .header('Song Count')
           .footer('Total number of songs played')
           .end()
         .number()
-          .position(360, 780)
+          .position(720, 780)
           .size(320, 350)
           .metric(summary.metric().average('_uid', d3.format('.2r')))
           .header('Visits Per Hour')
           .footer('Average number of visitors per hour')
           .end()
         .number()
-          .position(720, 780)
+          .position(1080, 780)
           .size(320, 350)
           .metric(summary.metric().average('session_time', secondsToHours, d3.format('.2r')))
           .header('Average Visit Time')
           .footer('Average number of hours per visit')
           .end()
         .pie()
-          .position(1080, 780)
+          .position(1440, 780)
           .size(320, 350)
           .metric(summary.metric().byDayOfWeek(true, true))
           .donut(true)
           .header('Day of Week')
           .end()
         .pie()
-          .position(1080, 1170)
+          .position(1440, 1170)
           .size(320, 350)
           .metric(
             summary.metric()
@@ -154,7 +153,8 @@
                 } else {
                   return '6pm-12am';
                 }
-              }))
+              })
+          )
           .donut(true)
           .header('Hours of Day')
           .end()
