--- a/examples/dashboard/index.html
+++ b/examples/dashboard/index.html
@@ -40,18 +40,29 @@
       }
 
       informant.group()
-        .bubble()
+        // .bubble()
+        //   .position(0, 0)
+        //   .size(320, 1520)
+        //   .metric(
+        //     summary.metric()
+        //       .average('_uid', 'key')
+        //       .average('session_time', 'value', secondsToHours)
+        //       .sum('video_id', 'radius')
+        //       .by('station_id')
+        //   )
+        //   .header('Overview')
+        //   .footer('x: Average unique visits per hour, y: Average visit time in hours, radius: Total number of views')
+        //   .end()
+        .bar()
           .position(0, 0)
           .size(320, 1520)
           .metric(
             summary.metric()
-              .average('_uid', 'key')
-              .average('session_time', 'value', secondsToHours)
-              .sum('video_id', 'radius')
+              .sum('video_id')
               .by('station_id')
           )
-          .header('Overview')
-          .footer('x: Average unique visits per hour, y: Average visit time in hours, radius: Total number of views')
+          .header('Song Plays')
+          .footer('Number of songs played by radio station')
           .end()
         .list()
           .position(360, 1170)
