--- a/examples/dashboard/index.html
+++ b/examples/dashboard/index.html
@@ -39,137 +39,136 @@
         return seconds / 3600;
       }
 
-      informant.group()
-        // .bubble()
-        //   .position(0, 0)
-        //   .size(320, 1520)
-        //   .metric(
-        //     summary.metric()
-        //       .average('_uid', 'key')
-        //       .average('session_time', 'value', secondsToHours)
-        //       .sum('video_id', 'radius')
-        //       .by('station_id')
-        //   )
-        //   .header('Overview')
-        //   .footer('x: Average unique visits per hour, y: Average visit time in hours, radius: Total number of views')
-        //   .end()
-        .bar()
-          .position(0, 0)
-          .size(320, 1520)
-          .metric(
-            summary.metric()
-              .sum('video_id')
-              .by('station_id')
-          )
-          .header('Song Plays')
-          .footer('Number of songs played by radio station')
-          .end()
-        .list()
-          .position(360, 1170)
-          .size(1040, 350)
-          .metric(summary.metric().by('station_id'))
-          .header('Radio Stations')
-          .end()
-        .graph()
-          .position(720, 0)
-          .size(320, 740)
-          .metric(summary.metric().sum('_uid').byHour())
-          .header('Visits')
-          .footer('Number of unique visits')
-          .end()
-        .graph()
-          .position(1080, 0)
-          .size(320, 740)
-          .metric(summary.metric().average('session_time', secondsToHours).byHour())
-          .header('Average Visit Time')
-          .footer('Average number of hours spent per visit')
-          .end()
-        .graph()
-          .position(1440, 0)
-          .size(320, 740)
-          .metric(
-            summary.metric()
-              .sum('_uid', 'unique_visits')
-              .sum('session_time', 'average_session_length')
-              .transform(function(d) {
-                // Total viewing hours is an approximation: average viewing time
-                // multiplied by number of unique visitors
-                return d.unique_visits * d.average_session_length;
-              }, secondsToHours)
-              .byHour()
-          )
-          .header('Total Tuning Hours')
-          .footer('Total hours spent viewing')
-          .end()
-        .pie()
-          .position(360, 780)
-          .size(320, 350)
-          // .metric(summary.metric().by('platform_type'))
-          .metric(
-            summary.metric().by(function(d, index) {
-              // Treat blank platform types as desktop
-              return d[index('platform_type')] || 'desktop';
-            })
-          )
-          .header('Platform')
-          .end()
-        .number()
-          .position(360, 0)
-          .size(320, 350)
-          .metric(summary.metric().distinctCount('station_id'))
-          .header('Radio Station Count')
-          .footer('Total unique stations')
-          .end()
-        .number()
-          .position(360, 390)
-          .size(320, 350)
-          .metric(summary.metric().sum('video_id', d3.format(',')))
-          .header('Song Count')
-          .footer('Total number of songs played')
-          .end()
-        .number()
-          .position(720, 780)
-          .size(320, 350)
-          .metric(summary.metric().average('_uid', d3.format('.2r')))
-          .header('Visits Per Hour')
-          .footer('Average number of visitors per hour')
-          .end()
-        .number()
-          .position(1080, 780)
-          .size(320, 350)
-          .metric(summary.metric().average('session_time', secondsToHours, d3.format('.2r')))
-          .header('Average Visit Time')
-          .footer('Average number of hours per visit')
-          .end()
-        .pie()
-          .position(1440, 780)
-          .size(320, 350)
-          .metric(summary.metric().byDayOfWeek(true, true))
-          .donut(true)
-          .header('Day of Week')
-          .end()
-        .pie()
-          .position(1440, 1170)
-          .size(320, 350)
-          .metric(
-            summary.metric()
-              .byDate(function(date) {
-                var hour = date.getHours();
-                if (hour <= 6) {
-                  return '12am-6am';
-                } else if (hour <= 12) {
-                  return '6am-12pm';
-                } else if (hour <= 18) {
-                  return '12pm-6pm';
-                } else {
-                  return '6pm-12am';
-                }
+      informant
+        .baseSize(340, 370)
+        .margins(10)
+        .group()
+          // .bubble()
+          //   .position(0, 0)
+          //   .size(32, 152)
+          //   .metric(
+          //     summary.metric()
+          //       .average('_uid', 'key')
+          //       .average('session_time', 'value', secondsToHours)
+          //       .sum('video_id', 'radius')
+          //       .by('station_id')
+          //   )
+          //   .header('Overview')
+          //   .footer('x: Average unique visits per hour, y: Average visit time in hours, radius: Total number of views')
+          //   .end()
+          .bar()
+            .position(0, 0)
+            .size(1, 4)
+            .metric(summary.metric().sum('video_id').by('station_id'))
+            .header('Song Plays')
+            .footer('Number of songs played by radio station')
+            .end()
+          .number()
+            .position(1, 0)
+            .size(1, 1)
+            .metric(summary.metric().distinctCount('station_id'))
+            .header('Radio Station Count')
+            .footer('Total unique stations')
+            .end()
+          .number()
+            .position(1, 1)
+            .size(1, 1)
+            .metric(summary.metric().sum('video_id', d3.format(',')))
+            .header('Song Count')
+            .footer('Total number of songs played')
+            .end()
+          .pie()
+            .position(1, 2)
+            .size(1, 1)
+            // .metric(summary.metric().by('platform_type'))
+            .metric(
+              summary.metric().by(function(d, index) {
+                // Treat blank platform types as desktop
+                return d[index('platform_type')] || 'desktop';
               })
-          )
-          .donut(true)
-          .header('Hours of Day')
-          .end()
-        .render('#container');
+            )
+            .header('Platform')
+            .end()
+          .list()
+            .position(1, 3)
+            .size(3, 1)
+            .metric(summary.metric().by('station_id'))
+            .header('Radio Stations')
+            .end()
+          .graph()
+            .position(2, 0)
+            .size(1, 2)
+            .metric(summary.metric().sum('_uid').byHour())
+            .header('Visits')
+            .footer('Number of unique visits')
+            .end()
+          .number()
+            .position(2, 2)
+            .size(1, 1)
+            .metric(summary.metric().average('_uid', d3.format('.2r')))
+            .header('Visits Per Hour')
+            .footer('Average number of visitors per hour')
+            .end()
+          .graph()
+            .position(3, 0)
+            .size(1, 2)
+            .metric(summary.metric().average('session_time', secondsToHours).byHour())
+            .header('Average Visit Time')
+            .footer('Average number of hours spent per visit')
+            .end()
+          .number()
+            .position(3, 2)
+            .size(1, 1)
+            .metric(summary.metric().average('session_time', secondsToHours, d3.format('.2r')))
+            .header('Average Visit Time')
+            .footer('Average number of hours per visit')
+            .end()
+          .graph()
+            .position(4, 0)
+            .size(1, 2)
+            .metric(
+              summary.metric()
+                .sum('_uid', 'unique_visits')
+                .sum('session_time', 'average_session_length')
+                .transform(function(d) {
+                  // Total viewing hours is an approximation: average viewing time
+                  // multiplied by number of unique visitors
+                  return d.unique_visits * d.average_session_length;
+                }, secondsToHours)
+                .byHour()
+            )
+            .header('Total Tuning Hours')
+            .footer('Total hours spent viewing')
+            .end()
+          .pie()
+            .position(4, 2)
+            .size(1, 1)
+            .metric(summary.metric().byDayOfWeek(true, true))
+            .donut(true)
+            .header('Day of Week')
+            .end()
+          .pie()
+            .position(4, 3)
+            .size(1, 1)
+            .metric(
+              summary.metric()
+                .byDate(function(date) {
+                  var hour = date.getHours();
+                  if (hour <= 6) {
+                    return '12am-6am';
+                  } else if (hour <= 12) {
+                    return '6am-12pm';
+                  } else if (hour <= 18) {
+                    return '12pm-6pm';
+                  } else {
+                    return '6pm-12am';
+                  }
+                })
+            )
+            .donut(true)
+            .header('Hours of Day')
+            .end()
+          .render('#container');
     </script>
   </body>
 </html>
